--- a/article/sg0/doc/0152.md
+++ b/article/sg0/doc/0152.md
@@ -1,6 +1,6 @@
 # 弹性界限的认知 - 08
 > 1.129954  
-> [ 2011/07/03 铃羽视角 ] 在 0043 基础上增加剧情：冈伦三人接比屋定来到 LAB，桶子二人急忙藏起开发中的电话微波炉（暂）二号机。  
+> [ 2011/07/03 铃羽视角 ] 在 0043 基础上结尾不同：冈伦三人接比屋定来到 LAB，桶子二人急忙藏起开发中的电话微波炉（暂）二号机。  
 
 | [←prev](./0151) | [menu](../) | [next→](./0153) |
 
