统一专有名词 井崎教授 淋浴间 『电话微波炉(暂)』 『时间跳跃机』

--- a/article/sg0/doc/0002.md
+++ b/article/sg0/doc/0002.md
@@ -18,7 +18,7 @@
 『说的也是呢\~那么，就不打扰你啦，再见\~\~』  
 多亏了真由理，15 分钟感觉也没那么难过了。  
 
-前台的桌上堆着要分发给研讨会参加者的小册子和宣传单，还有资料的折叠传单。《疑似科学的系谱和中钵论文》，这是井崎准教授的演讲宣传册。  
+前台的桌上堆着要分发给研讨会参加者的小册子和宣传单，还有资料的折叠传单。《疑似科学的系谱和中钵论文》，这是井崎教授的演讲宣传册。  
 
 ![](../static/image/0002-1.png)
 
@@ -26,7 +26,7 @@
 我随手翻了翻宣传册，上面简单介绍了 20 世纪之后的很多疑似科学和伪科学，姑且可以当做奇闻读物来看。作为这个系谱的最顶端，在后半场华丽登场的，就是俄罗斯的《中钵论文》，井崎教授这样作结。简言之，中钵博士的事件及其理论完全没有被明面上的学会所认可。不惜放弃自己的女儿都要得到的地位、权势和名声，那个男人一样都没有得到。而且根据传闻，他在论文发表之后就**被俄罗斯的研究设施软禁了起来**。听说他还以为自己会得到很好的待遇，这就显得更为滑稽。有一段时期，他被许多伪科学杂志报道和采访，本人也沉醉其中。  
 讽刺的是，《中钵论文》实在是太过正确，并且富有革命性。因为害怕这论文泄露到其他国家，**以俄罗斯对外情报厅为首，俄罗斯对此实施了严格的情报管制**。尽管如此，在水面之下，**围绕着论文的情报战争已经开始了**。从 2036 年回来的旅行者约翰·提托都这样说了，应该就是如此。这样发展的结果就是第三次世界大战吗？现在考虑这些也没用。  
 
-之后的几个小时，研讨会顺利地进行着。井崎准教授的演讲结束后，电机大的学生大部分都回去了。我继续待在这里，既是为了消磨时间，也是为了听听维克多·孔多利亚大学的演讲。想着时间还早，我慢悠悠地走向会场。  
+之后的几个小时，研讨会顺利地进行着。井崎教授的演讲结束后，电机大的学生大部分都回去了。我继续待在这里，既是为了消磨时间，也是为了听听维克多·孔多利亚大学的演讲。想着时间还早，我慢悠悠地走向会场。  
 途中正好看到了从职员室出来的比屋定真帆。她旁边有一位身材特别高大的金发白人男性，那位就是阿莱克西斯·雷斯吉宁教授吗？名字听起来不像是美国人，可能和红莉栖一样，是来自其他国家的移居者或是移民的后裔。虽然没想偷听，但看到他们边走边说着什么，表情还十分严肃，我也忍不住关注了谈话内容。他们的对话自然是用流利的英语，所以我没怎么听懂。但是从说话的语气上可以听出，并不是什么轻松的话题。话说刚才的对话当中好像有听到“牧濑”这个单词……真痛恨自己蹩脚的英语能力。  
 我就这样看着二人走进了在 UPX 剧场旁边的演讲者准备室，然后将好不容易听到的信息片段试着整理起来：“红莉栖家发生火灾”，“牧濑夫人平安无事”，“强盗”，“警察停止调查”，“为什么 FBI 会来”，“真奇怪”，大概这些。红莉栖的家……是指她在美国的住所吗？红莉栖的母亲就应该住在美国。那里发生了火灾？强盗、停止调查还有 FBI 什么的，这些可疑的词汇让我非常在意。  
 
@@ -59,7 +59,7 @@
 
 “在启动期间，就由我来说明一下系统的整体概述吧。”  
 在讲台中央还设置有另外一台投影仪，画面放映着一篇论文的概略图文，还带有为了方便一般听众理解的日语翻译，论文的标题是《**关于蓄积在颞叶的记忆相关神经脉冲信号的解析**》。  
-对我来说，这篇论文再熟悉不过了，就是想忘也忘不掉。这是由一位 17 岁天才少女所写，发表在《*Science*》且广受好评的论文。这位天才少女解析了全部掌管人类记忆的神经脉冲模式，并且应用这些知识，成功地将记忆转化成了数字信号，就在我的面前，开发出了**时间跳跃装置**这一划时代的发明。虽然已经不存在了——不论是时间跳跃装置还是开发者本人，在这条世界线上都不存在了。  
+对我来说，这篇论文再熟悉不过了，就是想忘也忘不掉。这是由一位 17 岁天才少女所写，发表在《*Science*》且广受好评的论文。这位天才少女解析了全部掌管人类记忆的神经脉冲模式，并且应用这些知识，成功地将记忆转化成了数字信号，就在我的面前，开发出了『**时间跳跃机**』这一划时代的发明。虽然已经不存在了——不论是『时间跳跃机』还是开发者本人，在这条世界线上都不存在了。  
 “因为曾发表在《*Science*》，所以在座各位中也有人了解过吧。  
  这是我们小组中一位天才的日本研究者提出并完成的。”  
 说到这，比屋定真帆连自己都没察觉到地叹了一声，然后继续翻译的工作。  
@@ -82,7 +82,7 @@
 “现在，我们的小组，正以此理论为基础，开发能够将人类记忆作为数据提取的系统。”  
 剧场内产生了微微的骚动。  
 “即——将人类的记忆保存到电脑，并加以活用的系统。”  
-剧场内的骚动更大了。这样啊，红莉栖的研究，在她死后也被好好地继承下来了啊。这也是理所当然的吧。α 世界线上，我曾经亲身证实过，时间跳跃装置的基础理论。那时，我的记忆毫无疑问是被数字化并储存在电脑中。现在雷斯吉宁教授讲述的，正是这一实践的基础理论。  
+剧场内的骚动更大了。这样啊，红莉栖的研究，在她死后也被好好地继承下来了啊。这也是理所当然的吧。α 世界线上，我曾经亲身证实过，『时间跳跃机』的基础理论。那时，我的记忆毫无疑问是被数字化并储存在电脑中。现在雷斯吉宁教授讲述的，正是这一实践的基础理论。  
 “现在，我们进行的项目主要有两个方面，一是医疗方面……”  
 雷斯吉宁教授切换了投影的影像。  
 “现在显示的是我们与精神生理学研究所共同进行的项目。  
