--- a/article/sg0/doc/0004.md
+++ b/article/sg0/doc/0004.md
@@ -6,7 +6,7 @@
 
 ---
 
-我能潜入 ATF 结束后的慰问会，还多亏了井崎准教授的介绍。由于井崎说，“这是要穿礼服的正式晚宴，好好穿上你的正装来。” 我还特意跑回家去换了衣服。为了参加晚会下了这么大功夫，井崎也第一次向我介绍了一线的研究员们，来自物理化学研究所、宇宙航空研究开发机构、物质构造科学研究所等等。但他马上就为了推销自己跑到别的大学教授那里去了，完全把我放置在一边。  
+我能潜入 ATF 结束后的慰问会，还多亏了井崎教授的介绍。由于他说，“这是要穿礼服的正式晚宴，好好穿上你的正装再来。” 我还特意跑回家换了衣服。为了参加晚会下了这么大功夫，井崎教授也第一次向我介绍了一线的研究员们，来自物理化学研究所、宇宙航空研究开发机构、物质构造科学研究所等等。但他马上就为了推销自己跑到别的大学教授那里去了，完全把我丢在一边。  
 一时间我也不知道能干什么，只能和桶子聊一会儿 RINE 打发时间。  
 『party，太羡慕了！土豪不可原谅！』  
 「你也来帮忙就好了。」  
@@ -29,8 +29,8 @@
 “姑、姑且还是有打算带合适的衣服来的啊……”  
 本来打算，可是忘了吗。所以才会呆在这种角落里。  
 “你就是白天站在前台那的人吧？”  
-“对，冈部伦太郎，东京电机大学的学生，现在在井崎研讨课学习中。”  
-想到井崎，我连忙拿出加急制作的名片。她也随意地拿出一张名片放在我手上。  
+“对，冈部伦太郎，东京电机大学的学生，现在跟随井崎准教授学习。”  
+想到井崎教授，我连忙拿出加急制作的名片。她也随意地拿出一张名片放在我手上。  
 “好了啦，没必要勉强自己这么郑重其事的讲话。”  
 “这样的话就太好了。”  
 “很少见的名字吧，我这个？”  
@@ -62,7 +62,7 @@
 “还没有解决掉的课题堆积如山啊。比刚才研讨会上说的还要多得多。  
  比方说，就算能把记忆数据输入到原本的大脑里，如果大脑不能利用起来就什么意义都没有。  
  虽然有那个记忆但是却处于想不起来的状态，也就是说会变成跟丧失记忆的大脑一样。”  
-听比屋定真帆这样说，我回想起了，红莉栖制作时间跳跃装置时说过的种种“解释”和“推论”。  
+听比屋定真帆这样说，我回想起了，红莉栖制作『时间跳跃机』时说过的种种“解释”和“推论”。  
 “那个好像是……人来在存取记忆的时候，会从前脑叶向侧额叶发送信号的吧？”  
 “嗯嗯， Top-Down 记忆检索信号。”  
 “那就是说——”  
@@ -92,31 +92,28 @@
 “我是从牧濑红莉栖哪里，知道这些东西的。”  
 “红莉栖……告诉你……什么时候？为什么？”  
 “她在这边留学的时候，成为了朋友，然后就聊到这些。”  
-这当然是谎言，我和红莉栖成为熟人，不是在这里而是在 α 世界线。  
-但是，这点谎言，应该是可以被原谅的吧。  
+这当然是谎言，我和红莉栖成为熟人，不是在这里，而是在 α 世界线。但是，这点谎言，应该可以被原谅吧。  
 “这样啊……那个红莉栖居然……谢谢你，非常感谢。”  
-这番话，出乎我的意料，没想到她会这样回答。  
+这番话出乎我的意料，我没想到她会这样回答。  
 “谢什么？”  
-“跟她成为了朋友哟。她就这样一个人到了日本……  
- 只有一个人在这边学习的话，一定会很无聊吧。”  
+“谢你跟她成为了朋友啊。她就这样一个人到了日本……  
+ 只有一个人在这边学习生活，一定会很无聊吧。”  
 “虽然经常吵架就是了。”  
-“真像那孩子呢。绝对不服输的性格对吧？”  
-“啊啊，老是说一些歪门邪道。”  
-“噗噗…”  
-“‘做个前脑叶白质切除手术把你前脑叶给搞出来怎么样’什么的，经常会这么说。”  
-“诶诶？居然连这种事都……红莉栖的话，确实会呢。”  
+“真像那孩子呢，绝对不服输的性格对吧？”  
+“啊啊，老是说一些难以理解的话——  
+ ‘做个前脑叶白质切除手术把你前脑叶给搞出来怎么样？’  
+ 经常会说这类的话。”  
+“诶诶？居然连这种话都……红莉栖的话，确实会呢。”  
 “是吧？真希望你能好好的教育教育学妹啊。”  
-“对于这一点我很认同，向你道歉。噗……  
- 呜呜……”  
-她笑了……我本来这样想着，可是比屋定真帆却突然掉下了眼泪。  
+“对于这一点我很认同，向你道歉。噗……呜呜……”  
+我本来以为她笑了，可是她却突然流下了眼泪。  
 “怎、怎么了？”  
-我慌忙递出手绢。  
-“诶…诶？”  
-对于自己在哭这件事，她好像也很疑惑的样子。  
-我很是不解，刚才的对话中，有什么踩到她的地雷了吗？  
+我慌忙递出手帕。  
+“诶……诶？”  
+她好像也很疑惑，自己为什么要哭。刚才的对话中，有什么踩到她的地雷了吗？  
 “不、不要紧吧？”  
 “没事啦，抱歉抱歉。”  
-她没有收下我的手绢，而是从白大褂里取出了纸巾擦了擦眼角。  
+她没有收下我的手帕，而是从白大褂里取出纸巾，擦了擦眼角。  
 
 “勇敢的爱因斯坦三世啊！”  
 “诶？！”  
