--- a/article/sg0/doc/0015.md
+++ b/article/sg0/doc/0015.md
@@ -49,7 +49,7 @@
 “啊……搞砸了……”  
 铃羽一脸尴尬，于是我终于察觉到，她在躲着谁了。  
 
-打开着的没人看的电视里，正在播放着正午的新闻。明知道没有任何人在看，铃羽用遥控器把电视的音量加的更大，为了让我们的对话不会传到浴室里去。浴室里现在正不断传出伴随着水声的真由理和由季开心的笑声。铃羽藏起来这件事被曝光的时候，气氛变得相当尴尬。真由理急忙想出了缓和气氛的方法。最初是想要铃羽一起，三人所谓的坦诚相见这样的提案，想来缓解一下由季和铃羽之间僵硬的关系。但是，铃羽以“那个淋浴室要 3 个人同时使用也太窄了”为由拒绝了。  
+打开着的没人看的电视里，正在播放着正午的新闻。明知道没有任何人在看，铃羽用遥控器把电视的音量加的更大，为了让我们的对话不会传到淋浴间里去。淋浴间里现在正不断传出伴随着水声的真由理和由季开心的笑声。铃羽藏起来这件事被曝光的时候，气氛变得相当尴尬。真由理急忙想出了缓和气氛的方法。最初是想要铃羽一起，三人所谓的坦诚相见这样的提案，想来缓解一下由季和铃羽之间僵硬的关系。但是，铃羽以“那个淋浴间要 3 个人同时使用也太窄了”为由拒绝了。  
 “真为难啊……”  
 铃羽困扰的看着天花板。  
 “不是铃羽的锅，是冈伦不对！”  
@@ -95,7 +95,7 @@
 “……”  
 “……”  
 
-得出结论后，讨论就此中断了。这么一来，不管怎么样都会在意浴室的声音。  
+得出结论后，讨论就此中断了。这么一来，无法自控地会在意淋浴间的动静。  
 “话说……可以看 Nico 直播吗？有动画《血旋》的特别篇直播哦。”  
 应该是无法继续坚持听那个声音了吧，桶子开了口。  
 “即使说不批准也会看的吧……请随意吧。”  
