--- a/article/sg0/doc/0020.md
+++ b/article/sg0/doc/0020.md
@@ -7,17 +7,17 @@
 ---
 
 轮胎摩擦地下停车场地面的声音传来，一辆深银色的旅行车正转向往这边开来。并不是国产车，而是一辆海外的不知道叫什么公司的，看起来很像跑车的旅行车。虽然我对车不太懂，但是据说正规经销商的话轻轻松松都超过了 800 万日元的价格。要说我为什么知道的这么清楚，是因为被车主炫耀过很多次了。  
-车在我们面前停下，按响喇叭示意着。从驾驶席上走下来的是井崎准教授。当我和雷斯吉宁教授、比屋定真帆吃饭的时候，偶然，因为别的事情打电话过来，然后和他说了教授他们的事情，他就提出回去的时候用他的车来送我们。雷斯吉宁教授虽然不想麻烦他，但是因为井崎强调无论如何都要这么做，于是就在这里见面了。明明是准教授却开这么好的车……大学内流传着，他是有钱的富二代，又或者是哪里来的社长夫人的援助——因为是独身所以把全部财产都拿来买车了——这是他以前悄悄告诉我的真相。当然是真是假我就无从得知了。  
-井崎就像是专属司机一样，专门打开后车门，护送着雷斯吉宁教授和比屋定真帆。雷斯吉宁教授对井崎说了声谢谢，坐进了车里；比屋定真帆因为要放行李，婉拒并绕到了车后备箱。  
+车在我们面前停下，按响喇叭示意着。从驾驶席上走下来的是井崎教授。当我和雷斯吉宁教授、比屋定真帆吃饭的时候，偶然，因为别的事情打电话过来，然后和他说了教授他们的事情，他就提出回去的时候用他的车来送我们。雷斯吉宁教授虽然不想麻烦他，但是因为井崎教授强调无论如何都要这么做，于是就在这里见面了。明明是准教授却开这么好的车……大学内流传着，他是有钱的富二代，又或者是哪里来的社长夫人的援助——因为是独身所以把全部财产都拿来买车了——这是他以前悄悄告诉我的真相。当然是真是假我就无从得知了。  
+井崎教授就像是专属司机一样，专门打开后车门，护送着雷斯吉宁教授和比屋定真帆。雷斯吉宁教授对井崎教授说了声谢谢，坐进了车里；比屋定真帆因为要放行李，婉拒并绕到了车后备箱。  
 “冈部君，这么机灵地让雷斯吉宁教授满意，还真是不能小看啊，你这家伙。”  
-井崎笑嘻嘻地用手肘顶了顶我。  
+井崎教授笑嘻嘻地用手肘顶了顶我。  
 “这个路子可不要放手哦？这关系到你的将来。”  
 “哈啊……”  
-虽然并不是让人厌恶的人，但是作为准教授的立场这样说稍微——不，相当轻浮。这也是他可惜的地方。井崎和我挥了挥手，打开了驾驶席的门。  
+虽然并不是让人厌恶的人，但是作为准教授的立场这样说稍微——不，相当轻浮。这也是他可惜的地方。井崎教授和我挥了挥手，打开了驾驶席的门。  
 “piu——”  
 嗯？什么？刚才的声音？几乎是在那没听过的声音到达耳朵的同时，副驾驶席这边的挡风玻璃开了一个孔。  
 “啊啊！！”  
-井崎惨叫着跌坐在地上。接着后部的车窗也变得粉碎。雷斯吉宁教授和比屋定真帆也同时发出惊呼。  
+井崎教授惨叫着跌坐在地上。接着后部的车窗也变得粉碎。雷斯吉宁教授和比屋定真帆也同时发出惊呼。  
 “什么啊，这是？！”  
 我还以为发生超常现象，陷入了混乱。在我的余光里，瞥见一个人影在移动。从柱子的阴影里，一个陌生的穿着黑色西装戴着眼镜的男人走了出来，明明是普通上班族的装扮，手里却握着一个似乎是奇妙形状的，像是手枪的东西。整体看起来很小枪身也很短，而且稍微有些扁平，哪里也没有装着类似消音器的东西。  
 
@@ -37,9 +37,9 @@
 男人浑身散发着异样的魄力和狂气，再次把那似乎是枪的物体指向这边。  
 “神所赐予的灵魂，是只有作为神之子的我们才具有的……绝对不会存于硅晶之上！”  
 “呜啊啊啊啊啊！！”  
-站起来的井崎，因为太过恐怖转过身去，脱兔一样地逃跑了。  
+站起来的井崎教授，因为太过恐怖转过身去，脱兔一样地逃跑了。  
 “piu——”  
-又是那个声音！太过于安静的细小，完全无法想象到那是枪声。但这次车窗并没有破，我的身上也没有被开洞。打偏了？难道被井崎的行动分心了吗？但是没有下次了。动起来！  
+又是那个声音！太过于安静的细小，完全无法想象到那是枪声。但这次车窗并没有破，我的身上也没有被开洞。打偏了？难道被井崎教授的行动分心了吗？但是没有下次了。动起来！  
 先把比屋定真帆塞进后座，然后我爬进了驾驶室。幸好车子的引擎一直是发动着的。连关门的时间都不想浪费，我一口气使劲把油门踩到底。激烈的引擎声浪让地下的空气激荡起来，袭击者也被这震耳欲聋的声音和震动吓了一跳。然而，车子完全没有前进的意思，一动不动。  
 “*Shift!* ”  
 “先挂挡啊！”  
