--- a/article/sg0/doc/0021.md
+++ b/article/sg0/doc/0021.md
@@ -68,7 +68,7 @@
 “我，我知道了……我自己脱……”  
 “全是汗……真由理酱，有干毛巾吗？”  
 “啊！给\~”  
-由季接过真由理从浴室拿过来的毛巾，轻柔地拭去铃羽额头和脖颈上的汗水。  
+由季接过真由理从淋浴间拿过来的毛巾，轻柔地拭去铃羽额头和脖颈上的汗水。  
 “哇，好、好痒……”  
 “忍忍就过去了，又不是小孩子”  
 “可……啊，痒……”  
