--- a/article/sg0/doc/0022.md
+++ b/article/sg0/doc/0022.md
@@ -45,7 +45,7 @@
 “没事……”  
 “才不是没事呢！你这么说的话，要让由季来教育你哦\~”  
 “嗯？我怎么了？”  
-由季把淋浴间的帘子拉开，皮肤微微发红地从淋浴间里出来了。  
+由季拉开淋浴间的帘子，皮肤微微发红地走了出来。  
 “铃小姐她，不肯睡觉呢！”  
 “啊啦。不可以哦，铃羽小姐。”
 “啊……”  
@@ -83,7 +83,7 @@
 “啊，对了，铃羽小姐，出汗了吧？吃饭前，给你擦擦身体吧？”  
 “诶？不是说了不用了吗？”  
 由季每天都像这样想帮忙，铃羽每次都拼命拒绝。  
-“虽然不能淋浴，但是不好好清洁的话是不可以的哦。”  
+“虽然不能洗澡，但是不好好清洁的话是不可以的哦。”  
 “昨天和前天都擦过了，可以了啊。一星期或两星期不管又不会死掉……”  
 “一星期！？那样不行的！不行！”  
 由季一边重复着，一边迅速跑向了淋浴间。  
