--- a/article/sg0/doc/0051.md
+++ b/article/sg0/doc/0051.md
@@ -47,8 +47,8 @@
 也就是说，世界线——变动了？  
 “……！”  
 我摇摇头，打消了刚刚浮现的猜想。  
-不可能会有这种荒唐事。世界线仅仅会在什么人改变了过去的时候变动。迄今为止，我只有在用电话微波炉（暂定）发 D-mail 的时候经历过。但是为了防止那样的事情再度发生，我应该已经把电话微波炉（暂定）废弃了才对。为此，我甚至不惜牺牲了红莉栖。  
-那么，这次到底是谁，到底是怎么做到的？如果是某个人开发了和电话微波炉（暂定）相同的装置呢？  
+不可能会有这种荒唐事。世界线仅仅会在什么人改变了过去的时候变动。迄今为止，我只有在用『电话微波炉(暂)』发 D-mail 的时候经历过。但是为了防止那样的事情再度发生，我应该已经把『电话微波炉(暂)』废弃了才对。为此，我甚至不惜牺牲了红莉栖。  
+那么，这次到底是谁，到底是怎么做到的？如果是某个人开发了和『电话微波炉(暂)』相同的装置呢？  
 
 ![](../static/image/0051-1.png)
 
@@ -135,7 +135,7 @@
 “别太逞强哦。我可不想变成你最后一个说过话的人。”
 “啊哈……”  
 我苦笑着结束了与“红莉栖”的对话。  
-以防万一，我又向桶子打电话确认了一遍，了解到自己的确是在前往教授和比屋定那里报告的途中。顺便一提，这几天的事基本也都与我的记忆吻合。也就是说，即使世界线变动了，在我能确认的范围内也没有发生什么变化。应该没什么大问题。说起来，刚才那一瞬的眩晕也有可能是因为什么精神性的疾病引起的。有可能只是由于感觉相同，激起了过去的心理创伤，害得记忆混乱了。电话微波炉（暂定）一开始就不存在。那么改变过去什么的，根本就不可能。  
+以防万一，我又向桶子打电话确认了一遍，了解到自己的确是在前往教授和比屋定那里报告的途中。顺便一提，这几天的事基本也都与我的记忆吻合。也就是说，即使世界线变动了，在我能确认的范围内也没有发生什么变化。应该没什么大问题。说起来，刚才那一瞬的眩晕也有可能是因为什么精神性的疾病引起的。有可能只是由于感觉相同，激起了过去的心理创伤，害得记忆混乱了。『电话微波炉(暂)』一开始就不存在。那么改变过去什么的，根本就不可能。  
 是的，就是这样。  
 我好几次这样说服自己，向着与教授他们等候的地方继续前进。  
 
