--- a/article/sg0/doc/0054.md
+++ b/article/sg0/doc/0054.md
@@ -89,7 +89,7 @@
 “……没，并没有想邀请谁。”  
 她会度过一个怎样的圣诞呢？  
 
-送真由理回家之后，一个人在路上，回想起白天的事情。如果——如果那是世界线变动……原因是什么？有谁成功开发了类似电话微波炉（暂定）的东西，向过去发送了短信，这种可能性是最高的。因为就连我们都成功做出来了，这并非不可能的事情。其他可能性的话——不，还是算了吧，那是我的错觉。而且，就算世界线变动了，原因也不在我们这里。已经不会跟我扯上关系了。一个人独处时，就会思考一些不必要的事情。  
+送真由理回家之后，一个人在路上，回想起白天的事情。如果——如果那是世界线变动……原因是什么？有谁成功开发了类似『电话微波炉(暂)』的东西，向过去发送了短信，这种可能性是最高的。因为就连我们都成功做出来了，这并非不可能的事情。其他可能性的话——不，还是算了吧，那是我的错觉。而且，就算世界线变动了，原因也不在我们这里。已经不会跟我扯上关系了。一个人独处时，就会思考一些不必要的事情。  
 ……  
 我从口袋中取出手机，点击了早已习惯的图标。  
 “Hello——”  
