--- a/article/sg0/doc/0057.md
+++ b/article/sg0/doc/0057.md
@@ -23,7 +23,7 @@
 因为我所在的大学对接受留学生很积极，在学校里看到外国人并不奇怪。但——  
 “不见了……”  
 慌忙追上去，但已经找不到刚才看到的人影了。  
-是我看错了吗？不过想想的话，就算教授来这所大学也不是什么奇怪的事。说不定，就是约好来见我的导师井崎的。而且井崎之前也很想和雷斯吉宁教授保持深度交流的样子。  
+是我看错了吗？不过想想的话，就算教授来这所大学也不是什么奇怪的事。说不定，就是约好来见我的导师井崎教授的。而且井崎教授之前也很想和雷斯吉宁教授保持深度交流的样子。  
 （下次见到教授问问吧……）  
 最后看了一眼那疑似教授的人影消失的方向，我离开了大学，前往秋叶原。  
 
