--- a/article/sg0/doc/0061.md
+++ b/article/sg0/doc/0061.md
@@ -45,7 +45,7 @@
 “嗯，拜托了\~那，我出门啦\~”  
 真由理穿上了外套，向我挥了挥手出去了。  
 
-那，给琉华子打电话吧。话说回来……要商量什么呢？不会又说想变成女孩子……之类的话吧。不，怎么说也不会是这个吧。那是因为电话微波炉（暂定）的存在，才第一次听到的请求。那到底是……算了，问问就知道了。  
+那，给琉华子打电话吧。话说回来……要商量什么呢？不会又说想变成女孩子……之类的话吧。不，怎么说也不会是这个吧。那是因为『电话微波炉(暂)』的存在，才第一次听到的请求。那到底是……算了，问问就知道了。  
 ……  
 （琉华子这家伙，不接啊……）  
 没办法。总之发个 RINE 吧。输入……发送——  
