--- a/article/sg0/doc/0086.md
+++ b/article/sg0/doc/0086.md
@@ -47,7 +47,7 @@
 “居然习得了护身术，真是佩服。”  
 “为什么在这里？”  
 “大概，和你的理由相同。
- 我刚才还在和 *Mr. Izaki(井崎)* 享用晚餐……  
+ 我刚才还在和 *Mr. Izaki(井崎教授)* 享用晚餐……  
  最后准备去 *Maid Bar*的时候，被持枪团伙袭击了。”  
 “啊！我、我也是这样！”  
 “果然啊……或许应该判断，这次的事件和瓦斯泄露事件与酒店被盗事件有着相同的理由。”  
