--- a/article/sg0/doc/0094.md
+++ b/article/sg0/doc/0094.md
@@ -129,10 +129,10 @@
 “唔……”  
 我到底在想什么啊！我可是曾经，放弃全部，眼看着红莉栖被杀的男人啊！但是这样的我，却为再次到达这条世界线，能和红莉栖再会而感到如此高兴。在悲伤着又一次失去真由理的同时，却想着这样的时间能一直持续下去就好了。明明我没有这样的资格。如果这个世界上有神存在的话，那么那肯定是性格扭曲而残酷的家伙。为何事到如今，要让我再遭遇这种事情。难道我的罪孽如此深重吗？明明应该已经做过决定了。我拯救不了世界，救不了红莉栖。然而——当红莉栖站在我面前的时候，我确实动摇了。是不是应该再一次回到 β 世界线？是不是应该发送 D-mail？  
 D-mail？  
-“说起来，电话微波炉（暂定）怎么样了？”  
+“说起来，『电话微波炉(暂)』怎么样了？”  
 “诶？怎么样了……你破坏的，忘了吗？”  
 “啊……这样啊……”  
-看来，电话微波炉（暂定）在这条世界线已经不存在了。想想也是当然的，因为只要有那东西存在，我们就会成为 SERN 的目标。但是没有电话微波炉（暂定）的话，就意味着没有办法凭借我的意愿，从这条世界线中脱离出去。这样的话，即使留在这条世界线，也不是我的错。这既不是我的责任，也不是因为我的期望造成的。既然如此——  
+看来，『电话微波炉(暂)』在这条世界线已经不存在了。想想也是当然的，因为只要有那东西存在，我们就会成为 SERN 的目标。但是没有『电话微波炉(暂)』的话，就意味着没有办法凭借我的意愿，从这条世界线中脱离出去。这样的话，即使留在这条世界线，也不是我的错。这既不是我的责任，也不是因为我的期望造成的。既然如此——  
 
 “呐，冈部。”  
 “嗯？”  
