--- a/article/sg0/doc/0095.md
+++ b/article/sg0/doc/0095.md
@@ -18,11 +18,11 @@
 
 ![](../static/image/0095-1.png)
 
-——电话微波炉（暂定）。曾经我们在这里制造的，未来道具 8 号机。也是改变了我的——不，是改变了世界的命运的机器。  
+『电话微波炉(暂)』——曾经我们在这里制造的，未来道具 8 号机。也是改变了我的——不，是改变了世界的命运的机器。  
 “为什么？这东西不是已经被破坏了吗？”  
 “……嗯嗯，已经破坏了。  
- 这是我重新制造的，说起来应该叫『电话微波炉改』呢\~  
- 准确的说是要加（暂定）对吧？所以就变成了『电话微波炉（暂定）改』\~”  
+ 这是我重新制造的，说起来应该叫『电话微波炉·改』呢\~  
+ 准确的说是要加(暂)对吧？所以就变成了『电话微波炉(暂)·改』\~”  
 红莉栖眯起一只眼睛，故作轻松地说着无关紧要的话。那样子与刻在我脑海深处的一样可爱，可是现在的我完全无暇欣赏，也无暇接上她的话题。  
 “名字什么的怎么样都好。为什么……要重新造出来……”  
 “为了把邮件送到过去。我要发送邮件，改变世界线。  
@@ -101,7 +101,7 @@
  不从梦里醒来是不行的啊，因为我已经……已经不想再看见你这么痛苦了……”  
 “红莉栖……”
 “那么，这样下去也是浪费时间，我要开始了。”  
-斩钉截铁地扔下结论，红莉栖转过身去。存在于她的背影中的，是无可动摇的意志，是决意。我想起了刚来到这条世界线时候，一直伫立在那里的红莉栖。现在想起来，她站在电话微波炉（暂定）面前之时，就已经下定决心了。不让任何人知道，没和任何人告别，就决定要前往自己不存在的世界。在得出结论之前，到底经历了多少思想斗争呢？质疑了多少次，迷茫了多少次呢？如果说这就是她经历过这些而得出的结论——我没有阻止的权利，我无法阻止她。  
+斩钉截铁地扔下结论，红莉栖转过身去。存在于她的背影中的，是无可动摇的意志，是决意。我想起了刚来到这条世界线时候，一直伫立在那里的红莉栖。现在想起来，她站在『电话微波炉(暂)』面前之时，就已经下定决心了。不让任何人知道，没和任何人告别，就决定要前往自己不存在的世界。在得出结论之前，到底经历了多少思想斗争呢？质疑了多少次，迷茫了多少次呢？如果说这就是她经历过这些而得出的结论——我没有阻止的权利，我无法阻止她。  
 “呐，冈部，在梦醒之前，我想做一个约定。”  
 “约定？”  
 “到达 β 世界线以后，请忘了我吧。”  
@@ -165,7 +165,7 @@
 这是宣告魔法时间结束的信号。  
 “啊……”  
 “呵……”
-我咽下了想要满溢而出的话语，只这么简单的回应一声。红莉栖对这样的我，露出了满足的笑容，转身朝向电话微波炉（暂定）。邮件的内容早已准备好了吧，她毫不犹豫，电话微波炉（暂定）开始发出雷鸣般的巨大声响。倒计时非常、非常漫长。在这个过程中，红莉栖一直背对着我。我也只是注视着她的背影。雷鸣逐渐变得激烈。显示面板的数字逐渐减小——  
+我咽下了想要满溢而出的话语，只这么简单的回应一声。红莉栖对这样的我，露出了满足的笑容，转身朝向『电话微波炉(暂)』。邮件的内容早已准备好了吧，她毫不犹豫，『电话微波炉(暂)』开始发出雷鸣般的巨大声响。倒计时非常、非常漫长。在这个过程中，红莉栖一直背对着我。我也只是注视着她的背影。雷鸣逐渐变得激烈。显示面板的数字逐渐减小——  
 然后，归零之时已至。  
 
 ![](../static/image/0095-4.png)
