--- a/article/sg0/doc/0100.md
+++ b/article/sg0/doc/0100.md
@@ -32,7 +32,7 @@
 “……也是呢。也就是说，更有可能是在没有记忆的那段时期——1998 年以后，执行了这样的移植吗？”  
 “2036 年的未来有可能，但是现在的技术能做到吗？”  
 “如果是红莉栖，就有可能。”  
-毕竟，红莉栖可是一个人就做出了时间跳跃装置的人啊。  
+毕竟，红莉栖可是一个人就做出了『时间跳跃机』的人啊。  
 “你是说牧濑红莉栖把自己的记忆移植到了篝身上？她是这种疯狂科学家一类的人吗？”  
 “……”  
 不可能，绝对不可能。不过，像牧濑红莉栖这样的天才不会有第二个。如果她没有做的话，更想不到其他人能够做到。  
