--- a/article/sg0/doc/0106.md
+++ b/article/sg0/doc/0106.md
@@ -1,6 +1,6 @@
 # 二律背反的双模 - 13
 > 1.053649  
-> [ 2011/01/06 ] 得知真相后，几人讨论了《中钵论文》，怀疑真正的战争起因是背后的红莉栖原版论文，而记忆移植的目的也是为了时间机器相关的情报。目前商讨的解决方案是，真帆决心制造出时间跳跃装置，然后将篝的原本记忆重新覆盖回去。  
+> [ 2011/01/06 ] 得知真相后，几人讨论了《中钵论文》，怀疑真正的战争起因是背后的红莉栖原版论文，而记忆移植的目的也是为了时间机器相关的情报。目前商讨的解决方案是，真帆决心制造出『时间跳跃机』，然后将篝的原本记忆重新覆盖回去。  
 
 | [←prev](./0105) | [menu](../) | [next→](./0107) |
 
@@ -71,7 +71,7 @@
 
 “说起来……红莉栖在去日本之前说过，要去见父亲。  
  好像有一个新理论的发布会，还发来了邀请函。”  
-那时候，红莉栖自己写的论文被中钵抢走了。在那之后，逃到俄罗斯的中钵发表了所谓的《中钵论文》。论文本身我未过目一想起这个论文，就会想起那天——想起在那之后发生的事件，所以避开了视线。但是，从井崎教授他们那里听过对于论文的评价，说那篇论文只能算是伪科学文章，糟糕到仿佛是个笑话。但假如——**发表的只是劣化的副本**的话——发表的是中钵自己根据对红莉栖所写的论文的理解而重新书写的版本，**红莉栖所写的原版还存在于其它地方**的话……这就说得通了。红莉栖写的论文，不可能是那么陈腐的东西。毕竟事实上，她可是做出过时间跳跃装置的。  
+那时候，红莉栖自己写的论文被中钵抢走了。在那之后，逃到俄罗斯的中钵发表了所谓的《中钵论文》。论文本身我未过目一想起这个论文，就会想起那天——想起在那之后发生的事件，所以避开了视线。但是，从井崎教授他们那里听过对于论文的评价，说那篇论文只能算是伪科学文章，糟糕到仿佛是个笑话。但假如——**发表的只是劣化的副本**的话——发表的是中钵自己根据对红莉栖所写的论文的理解而重新书写的版本，**红莉栖所写的原版还存在于其它地方**的话……这就说得通了。红莉栖写的论文，不可能是那么陈腐的东西。毕竟事实上，她可是做出过『时间跳跃机』的。  
 “所以，这么做的目的，是知道原版论文存在的某个人，  
  为了**从红莉栖的记忆中获取时间机器的相关理论**吗？”  
 “第三次世界大战的起因，是**欧盟**和**俄罗斯**引起的，**时间机器竞争**。  
@@ -84,7 +84,7 @@
 “嗯，是的，可行的。  
  而且，『Amadeus』本来就是为了这个目的被制造出来的。”  
 在医疗领域的应用……在研讨会上由真帆翻译的雷斯吉宁教授的发言中，确实说过这方面的内容。在这条世界线……因为『Amadeus』被冻结了，所以那次研讨会也不存在了。真帆重新说明了一遍，内容和研讨会上说的差不多。果然，记忆数据的移植，在理论上是可行的。  
-“红莉栖所发明的‘时间跳跃装置’，就是这项技术的应用。”  
+“红莉栖所发明的『时间跳跃机』，就是这项技术的应用。”  
 “当然，不管是哪一个，制造的目的都是‘把自己的记忆移植到自己的大脑中’……”  
 即使是这样，红莉栖也曾经说过这很危险。  
 “那么，在大脑中移植入别人的记忆会怎么样？”  
@@ -124,7 +124,7 @@
 “有这么简单……”  
 “但是，红莉栖就造出来过不是吗？”  
 “呃？”  
-啊，是啊，用时间跳跃装置那部分就可以了。  
+啊，是啊，用『时间跳跃机』那部分就可以了。  
 “那么我也可能会……不，我一定会造出来给你看。”  
 这样的话，也许我也能帮上忙。  
 “问题是记忆数据在哪里，这个只能想办法调查了。”  
