--- a/article/sg0/doc/0107.md
+++ b/article/sg0/doc/0107.md
@@ -1,6 +1,6 @@
 # 二律背反的双模 - 14
 > 1.053649  
-> [ 2011/01/06 真帆视角 ] 和光市办公室被侵入，但是没有丢失什么东西。雷斯吉宁套话得知真帆的笔记本在酒店。真帆请假，带着行李和红莉栖笔记本与硬盘准备常驻 LAB 研发时间跳跃装置。  
+> [ 2011/01/06 真帆视角 ] 和光市办公室被侵入，但是没有丢失什么东西。雷斯吉宁套话得知真帆的笔记本在酒店。真帆请假，带着行李和红莉栖笔记本与硬盘准备常驻 LAB 研发『时间跳跃机』。  
 
 | [←prev](./0106) | [menu](../) | [next→](./0108) |
 
@@ -12,7 +12,7 @@
 ![](../static/image/0107-1.png)
 
 电车里，比屋定真帆无法抑制自己的兴奋。自称来自未来的两名少女，还有冈部伦太郎不断进行时间跳跃的故事。通常来说，不论如何也不会相信。但是，如果说这些构想是基于牧濑红莉栖的智慧的话，就能接受。如果是她——那位天才，也许能将之化为可能。红莉栖对于真帆来说，就是能让她感受到那种可能性。而且，不管怎么说，真帆亲眼见到了那个东西。  
-从 LAB 离开后，她被铃羽带到了广播会馆的屋顶，看到了真正的时间机器。虽然时间紧迫，而且又是黑夜，没有进行详细调查，但那一看就不是现代技术能够制造的东西。说真心话，她真想从明天——不，今天就开始详细分析那个机器，然后造个一样的出来。但是，在那之前，真帆有不得不完成的事情——红莉栖研发的时间跳跃装置，制造其改良版，为此要暂时先泡在 LAB 里了。  
+从 LAB 离开后，她被铃羽带到了广播会馆的屋顶，看到了真正的时间机器。虽然时间紧迫，而且又是黑夜，没有进行详细调查，但那一看就不是现代技术能够制造的东西。说真心话，她真想从明天——不，今天就开始详细分析那个机器，然后造个一样的出来。但是，在那之前，真帆有不得不完成的事情——红莉栖研发的『时间跳跃机』，制造其改良版，为此要暂时先泡在 LAB 里了。  
 这么思考着，真帆来到了位于和光市的办公室，为了拿些必要物品。从外面看办公室的窗户，即使到了这个时间，依然看起来灯火通明。  
 “*Maho!*”  
 一进入办公室，雷斯吉宁教授就脸色铁青地赶了过来。  
@@ -51,7 +51,7 @@
 
 ![](../static/image/0107-4.png)
 
-雷斯吉宁教授意外爽快地同意了真帆的休假请求。正月里也来了一趟办公室说不定是正确的。这样，就能专心进行时间跳跃装置的制作了。  
+雷斯吉宁教授意外爽快地同意了真帆的休假请求。正月里也来了一趟办公室说不定是正确的。这样，就能专心进行『时间跳跃机』的制作了。  
 回到酒店房间的真帆，匆忙地收拾着行李。虽然并不准备退房，但是为了待在 LAB 还是需要替换衣物等诸多用品。  
 “好嘞，接下来……”  
 真帆一只手拿着塞满行李的包，另一只手又拿起放在旁边的另一个包——里面装着作为红莉栖遗物分得的笔记本电脑和硬盘。至今已经不知道试着解析过密码多少次，但还未成功过。虽然知道带过去可能暂时也用不上，但是无法容忍自己扔下这些。  
