--- a/article/sg0/doc/0108.md
+++ b/article/sg0/doc/0108.md
@@ -25,7 +25,7 @@
 “话说回来，冈伦，她……真的，就像是另一个人。”  
 “是啊……”  
 我对于桶子的耳语点头回应。这些天里，篝的大脑受到了大量红莉栖记忆的侵蚀。最近，她和长时间呆在这里的真帆，经常进行专业方面的交流，对于真帆的称呼也完全变成了“前辈”。虽然真帆最初也感到违和，但现在看样子已经习惯了。真帆也想与红莉栖探讨装置的概要，看样子是帮上忙了。  
-“话说回来，在这样的 LAB 里真的造出了时间跳跃装置……  
+“话说回来，在这样的 LAB 里真的造出了『时间跳跃机』……  
  就算已经亲眼看过时间机器也还是不敢相信。”  
 “但是，将人的记忆全部数据化再发向过去的想法很厉害呢，不愧是真帆前辈。”  
 “这句话，完完整整地还给你。”  
@@ -57,7 +57,7 @@
  跟真由理妈妈她们的记忆也好，小时候跟爸爸的记忆也好，
  美国的大学的事情也好，全都在我的脑袋里面啊！  
  哪个是真的哪个又是假的，我……搞不懂啊……”  
-她的哭喊最后变成了呜咽。这也是没办法的，在篝看来，全部都是真实的，没有什么虚假。努力保持自我——只是嘴上说起来轻松，并不是那么简单就能做到的。曾经，在那个时间跳跃装置完成的时候，红莉栖也说过，绝对不要向别人的脑中输送记忆，会引起人格的崩坏。但是，如果……只是假设……就这样放任不管的话，篝会变得怎么样呢？篝的记忆会消失，只有红莉栖的记忆留了下来——这种可能性并不为零。到那时，在我面前的到底是谁？是篝，还是……红莉栖？如果，是红莉栖的话——  
+她的哭喊最后变成了呜咽。这也是没办法的，在篝看来，全部都是真实的，没有什么虚假。努力保持自我——只是嘴上说起来轻松，并不是那么简单就能做到的。曾经，在那个『时间跳跃机』完成的时候，红莉栖也说过，绝对不要向别人的脑中输送记忆，会引起人格的崩坏。但是，如果……只是假设……就这样放任不管的话，篝会变得怎么样呢？篝的记忆会消失，只有红莉栖的记忆留了下来——这种可能性并不为零。到那时，在我面前的到底是谁？是篝，还是……红莉栖？如果，是红莉栖的话——  
 “……”  
 没有这种事。不可能会有这种事。不能去想这种事。但是，越是这么思考，这种恶魔般的想法越是会冒出来，我对此拼命地否定着。  
 “呐……我，到底该怎么办？救救我……妈妈……爸爸……”  
