--- a/article/sg0/doc/0110.md
+++ b/article/sg0/doc/0110.md
@@ -1,6 +1,6 @@
 # 二律背反的双模 - 17
 > 1.053649  
-> [ 2011/01/11 ] 篝的情况已经恶化到遗忘真由理并晕倒，目前留在柳林神社由真由理和琉华子照顾。回到 LAB，骇入 SERN、制作时间跳跃装置完成。真帆得知酒店房间遭窃，推测目标是红莉栖笔记本电脑和硬盘。  
+> [ 2011/01/11 ] 篝的情况已经恶化到遗忘真由理并晕倒，目前留在柳林神社由真由理和琉华子照顾。回到 LAB，骇入 SERN、制作『时间跳跃机』完成。真帆得知酒店房间遭窃，推测目标是红莉栖笔记本电脑和硬盘。  
 
 | [←prev](./0109) | [menu](../) | [next→](./0111) |
 
