--- a/article/sg0/doc/0112.md
+++ b/article/sg0/doc/0112.md
@@ -103,7 +103,7 @@
 克歇尔编号 K620——魔笛。  
 “K62……有了，这个！”  
 “接下来的步骤，就跟之前说的一样，拜托了！”  
-做法，相比于红莉栖的时间跳跃装置更为简单。因为已经有记忆数据了，所以不需要扫描用的 VR 耳机，也不需要电话微波炉（暂定）。只要单纯地把篝的记忆输进解码程序，由 SERN 的 LHC 压缩，再将压缩完成的数据转送回来，接着传到手机上——  
+做法，相比于红莉栖的『时间跳跃机』更为简单。因为已经有记忆数据了，所以不需要扫描用的 VR 耳机，也不需要『电话微波炉(暂)』。只要单纯地把篝的记忆输进解码程序，由 SERN 的 LHC 压缩，再将压缩完成的数据转送回来，接着传到手机上——  
 “快点！完全被包围了！！”  
 “桶子，准备好了吗！？”  
 “没问题！”  
