--- a/article/sg0/doc/0113.md
+++ b/article/sg0/doc/0113.md
@@ -20,7 +20,7 @@
 ……篝？耳中一听到这个名字，迷糊的意识立刻就清醒了过来。我一下子坐起来，发现自己正在 LAB 的沙发上，窗外一片明亮。  
 “呼\~终于起床了呢\~嘟嘟噜\~♪冈伦\~”  
 “啊……嗯。”  
-真由理满意地点点头，从我身边走开。环顾房间，桌上摊开的教科书和笔记应该是真由理的，她在做作业吧。除了真由理，还有桶子正蜷曲着他巨大的身体，面朝电脑，显示器中尽是一些萌萌的女性角色，看来又在玩黄游。当下所见，LAB 里只有我和桶子、真由理三个人。看了一下手机的时间，快到 12 点了，也就是说，我睡了 10 个多小时。这算怎么回事，我居然还没确认世界线到底有没有变动就失去意识了。仔细聆听，窗外传来了一如平常的嘈杂声，完全没有半点 STRATFO 正在逼近的迹象，所以先松了一口气。  
+真由理满意地点点头，从我身边走开。环顾房间，桌上摊开的教科书和笔记应该是真由理的，她在做作业吧。除了真由理，还有桶子正蜷曲着他巨大的身体，面朝电脑，显示器中尽是一些萌萌的女性角色，看来又在玩工口游戏。当下所见，LAB 里只有我和桶子、真由理三个人。看了一下手机的时间，快到 12 点了，也就是说，我睡了 10 个多小时。这算怎么回事，我居然还没确认世界线到底有没有变动就失去意识了。仔细聆听，窗外传来了一如平常的嘈杂声，完全没有半点 STRATFO 正在逼近的迹象，所以先松了一口气。  
 “冈伦，你刚才的样子好像做了噩梦一样，没事吧？”  
 “啊……嗯。”  
 “喝点麦茶吗？刚起床还是不要喝 Dr. Pepper 比较好。”  
@@ -77,7 +77,7 @@
 “什……！”  
 我不禁愣在原地。桶子看起来不像在说谎，也没理由说谎。也就是说，在这条世界线，篝的大脑里本来就没有被植入红莉栖的记忆吗？  
 “过、过来一下！”  
-“啊\~我正在玩黄游啊\~”  
+“啊\~我正在玩工口游戏啊\~”  
 “够了！”  
 我拉桶子来到楼下，把搞不清状况的真由理留在房间里。  
 “哇\~好冷啊。冈伦你想杀了我吗……”  
@@ -105,7 +105,7 @@
 （回来……了吗？）  
 现在的篝，和我在移动到 α 世界线之前，第一次遇到的篝很接近。包括我们正在打算找回篝的记忆，周围的情况和那时候差不多。这难道是，由于世界线再一次变动，回到了原来的世界线了吗？如果有世界线变动率测量器就能确认了。  
 “……呵呵。”  
-不知不觉，我又开始像以前一样的思考了。对于这样的自己苦笑了一下。打住吧，我已经决定，不管是时间机器，还是时间跳跃装置，都不要扯上关系了。我能做到的，只有帮忙取回篝的记忆，仅此而已。  
+不知不觉，我又开始像以前一样的思考了。对于这样的自己苦笑了一下。打住吧，我已经决定，不管是时间机器，还是『时间跳跃机』，都不要扯上关系了。我能做到的，只有帮忙取回篝的记忆，仅此而已。  
 “冈伦，你刚刚开始就不太对劲啊？”  
 “不，没事的，别在意。”  
 “那就好。话说，好冷啊，可以回去了吗？”  
