--- a/article/sg0/doc/0122.md
+++ b/article/sg0/doc/0122.md
@@ -19,7 +19,7 @@
 - 比屋定真帆
   - 从冈伦处得知时间机器情报
   - 与众人分析得出，真正的战争起因是《中钵论文》背后的红莉栖原版论文，而记忆移植的目的也是为了时间机器相关的情报
-  - 与桶子合力开发出了时间跳跃装置
+  - 与桶子合力开发出了『时间跳跃机』
 - 椎名篝
   - 被琉华子父亲的朋友发现，脑内没有任何之前的记忆
   - 借住在柳林神社
