--- a/article/sg0/doc/0125.md
+++ b/article/sg0/doc/0125.md
@@ -124,7 +124,7 @@
 当然很受打击，但于我而言最有冲击性的是——  
 “这份记忆是曾经被数据化过的吧……”  
 从孩提时代开始的记忆、那个夏天的记忆、和红莉栖的记忆，全部都曾变成过 0 和 1。这，还可以称之为人类吗？我还算是人类吗？  
-“但是这么说的话，牧濑氏的时间跳跃装置的技术不也一样吗？冈伦经历过很多次了吧。”  
+“但是这么说的话，牧濑氏的『时间跳跃机』的技术不也一样吗？冈伦经历过很多次了吧。”  
 ……的确是那样。但是，就算头脑明白这道理，却还是没办法整理自己的心情。被隔断了的 25 年的时间，就像把这时间都忘却在了数字世界当中一样，甚至有种这段时间是被夺去了的感觉。  
 
 “我果然还是无法接受……”  
