--- a/article/sg0/doc/0128.md
+++ b/article/sg0/doc/0128.md
@@ -54,11 +54,11 @@
 难不成，她是因为担心我而特意回来的？  
 “虽然我可能代替不了红莉栖，但是如果你愿意的话，也可以和我谈一谈。”  
 “比屋定……”  
-根本没必要考虑现在和她说是否合适，之后还要依靠她制作出时间跳跃装置，为此她有必要知道一切。  
+根本没必要考虑现在和她说是否合适，之后还要依靠她制作出『时间跳跃机』，为此她有必要知道一切。  
 “我接下来要说的事，可能听起来很荒谬，但你愿意听我说吗？”  
 
 “真是的……你这家伙真是……”  
-这是真帆在听完我说的之后的第一句感想。和以前一样，当然不能一下子就相信所有内容，但是，真帆也感受到我认真的态度，耐心地听完了我的讲述。对于不能理解的事情，她会在整理好思路后提出问题。果然对时间跳跃装置和时间机器表现出了浓厚的兴趣，我则尽我所能地对那个系统进行描述。为此，我还带她来到了广播会馆楼顶，给她展示了时间机器。  
+这是真帆在听完我说的之后的第一句感想。和以前一样，当然不能一下子就相信所有内容，但是，真帆也感受到我认真的态度，耐心地听完了我的讲述。对于不能理解的事情，她会在整理好思路后提出问题。果然对『时间跳跃机』和时间机器表现出了浓厚的兴趣，我则尽我所能地对那个系统进行描述。为此，我还带她来到了广播会馆楼顶，给她展示了时间机器。  
 “你能相信么……？”  
 “不信也不行吧，你都用这幅表情说出来了。  
  而且……都亲眼看到这种东西了。”  
@@ -104,7 +104,7 @@
  你就还是一个不折不扣的人类，就还是冈部伦太郎哟。  
  不要担心啦。”  
 “比屋定……”  
-“再说，红莉栖制作的那个时间跳跃装置，不也是将记忆数据化后再还原吗？  
+“再说，红莉栖制作的那个『时间跳跃机』，不也是将记忆数据化后再还原吗？  
  那么，你现在烦恼的事不就毫无意义了吗？”  
 未来的桶子也是这么说的。不可思议的是，听到这些话从她口中说出来后，我一直以来的沉重的心情，现在轻快了不少。  
 “……虽然这种时候，红莉栖或许会说些更透彻的话来。”  
