--- a/article/sg0/doc/0130.md
+++ b/article/sg0/doc/0130.md
@@ -111,7 +111,7 @@
 “哇，是微波炉酱\~”  
 “不是用来解冻炸鸡的哦。”  
 “好可惜……大家肚子饿了的话，我还想用多汁炸鸡 NO.1 来款待大家的……”  
-首先要重现电话微波炉（暂定），之后再请真帆协助制造时间跳跃装置。从未来回来之前，我已经牢牢记住了它的结构和机理，应该不会花太多时间。  
+首先要重现『电话微波炉(暂)』，之后再请真帆协助制造『时间跳跃机』。从未来回来之前，我已经牢牢记住了它的结构和机理，应该不会花太多时间。  
 LAB 终于重现了一派忙碌的景象。  
 
 
