--- a/article/sg0/doc/0132.md
+++ b/article/sg0/doc/0132.md
@@ -18,7 +18,7 @@
 “真是的，能不能不要一次性拜托别人这么多高难度的任务啊。”  
 “对不起……那，完成了吗？”  
 “姑且按你说的完成了。”  
-开发室里的微波炉，已经连上了一个不同于半年前见过的头戴设备。因为是基于之前用来备份我的记忆的装置改装的，所以才能在这么短时间内完成——时间跳跃装置，完成了……这样一来，未来的我跳回这里后又能再往前跳 48 个小时了。  
+开发室里的微波炉，已经连上了一个不同于半年前见过的头戴设备。因为是基于之前用来备份我的记忆的装置改装的，所以才能在这么短时间内完成——『时间跳跃机』，完成了……这样一来，未来的我跳回这里后又能再往前跳 48 个小时了。  
 “还有这些。”  
 真帆递过来两台手机，本来是我和真帆原本使用的智能手机，现在成为了接下来的作战要用的秘密道具。是我拜托真帆追加开发的，搭载了使用简单的 AI 来欺骗对方的模拟应答 APP。  
 “真厉害啊，竟然能在这么短时间内做出 AI。”  
