--- a/article/sg0/doc/0136.md
+++ b/article/sg0/doc/0136.md
@@ -133,7 +133,7 @@
 莱耶丝用手指按下了键盘。  
 
 …………  
-鸦雀无声，什么都没发生。没有像发动电话微波炉（暂定）那样发光，也没有发出轰鸣。这是当然的，因为一切都是在她脑内发生的。  
+鸦雀无声，什么都没发生。没有像发动『电话微波炉(暂)』那样发光，也没有发出轰鸣。这是当然的，因为一切都是在她脑内发生的。  
 “怎、怎么样了……?。”  
 莱耶丝，保持着按下键盘的姿势，纹丝不动。记忆被植入了吗？我下定决心要去查看她的情况，就在迈出第一步的时候，莱耶丝虚脱了一般，跪倒在地。我透过光线看到了她的脸，只看到一片虚无。既没有光，也没有暗，什么都没有，她的双瞳中只剩下空洞。只有，按下键盘的那一瞬间的恍惚，仍留在她的脸上。  
 “冈伦先生……那个人……”  
