--- a/article/sg0/doc/0138.md
+++ b/article/sg0/doc/0138.md
@@ -40,9 +40,9 @@
 
 ![](../static/image/0138-1.png)
 
-开发室的深处放着陈旧的微波炉造型的装置。是在那场骚乱中，在真帆的帮助下成功再现的时间跳跃装置，如今桶子为它追加了新的机能。  
+开发室的深处放着陈旧的微波炉造型的装置。是在那场骚乱中，在真帆的帮助下成功再现的『时间跳跃机』，如今桶子为它追加了新的机能。  
 “话说回来，竟然是这样的东西在掌握着世界的命运啊。”  
-没错，所有的事情都是从这里开始的。我们的命运、红莉栖的命运，都是被它玩弄的结果。和原来的电话微波炉（暂定）的一个不同点在于，和它连接的手机变成了智能手机。向过去发送的邮件，无论如何都会被 SERN 捕捉到。那样的话，我们又会被 SERN 盯上，也就等同于，把牺牲了红莉栖选择的这个世界，再次卷入到灾祸中，那就没有意义了。但是，现在的通信手段不止邮件，还有别的传递消息的方法，我们现在频繁使用的 RINE 也是其中之一。  
+没错，所有的事情都是从这里开始的。我们的命运、红莉栖的命运，都是被它玩弄的结果。和原来的『电话微波炉(暂)』的一个不同点在于，和它连接的手机变成了智能手机。向过去发送的邮件，无论如何都会被 SERN 捕捉到。那样的话，我们又会被 SERN 盯上，也就等同于，把牺牲了红莉栖选择的这个世界，再次卷入到灾祸中，那就没有意义了。但是，现在的通信手段不止邮件，还有别的传递消息的方法，我们现在频繁使用的 RINE 也是其中之一。  
 “就命名为 **D-RINE** 吧。”  
 当然，把文字信息发送回过去的原理是一样的，利用显像管电视的电子来控制重力，从而使信息通过奇点。另外，能发送的文字数和 D-Mail 一样，也是 18 个文字。不过，这样就不用担心会被 SERN 捕捉到，应该也不用担心真由理会再次牺牲了。问题是，无法向 RINE 成为通信手段之前的时间点发送信息，这也是没办法的。现在，**把可能性都连接起来**，才是最重要的事项。  
 “真是的，为了实现你的需求，不能被任何方面捕捉到，我费了好大功夫来着。  
