--- a/article/sg0/doc/0140.md
+++ b/article/sg0/doc/0140.md
@@ -142,7 +142,7 @@
 “那，这次是为什么？”  
 “这个……因为和牧濑红莉栖有关。”  
 比屋定脸上浮现了自嘲般的笑容。  
-“时间旅行理论？时间跳跃装置？开什么玩笑啊，这种东西怎么可能存在？  
+“时间旅行理论？『时间跳跃机』？开什么玩笑啊，这种东西怎么可能存在？  
  但是，如果是红莉栖，就有可能做到。毕竟那孩子，可是一直在颠覆我的常识啊。”  
 “这样……啊。”  
 毕竟比屋定的『Amadeus』的 ID 是 Salieri——刚想这么说，还是制止了自己。因为那个 ID 里，有着一名科学家不能被碰触的忧郁思绪。  
