--- a/article/sg0/doc/0149.md
+++ b/article/sg0/doc/0149.md
@@ -23,7 +23,7 @@
 换作是以前，对于桶子这种胡闹的称呼方式，真帆会毫不掩饰地表达不高兴。最近不知道是习惯了还是放弃了，她对此不会作出特别的反应。  
 “……你们那边进展怎么样？”  
 “总算重新组装成了冈伦拆掉之前的状态，我想机能基本能够还原。”  
-桶子把视线投向 LAB 深处，通称为“开发室”的隔帘里面。现在，获得了真帆的协助，他们正在重新制作被冈部命名为“时间跳跃装置”的机器。  
+桶子把视线投向 LAB 深处，通称为“开发室”的隔帘里面。现在，获得了真帆的协助，他们正在重新制作被冈部命名为『时间跳跃机』的机器。  
 “……不顺利吗？”  
 “嗯，该说是不稳定吗，感觉和普通的微波炉没什么区别。”  
 “是吗……到底是哪里不对呢？”  
