--- a/article/sg0/doc/0150.md
+++ b/article/sg0/doc/0150.md
@@ -1,6 +1,6 @@
 # 弹性界限的认知 - 06
 > 1.129954  
-> [ 2011/06/月末 铃羽视角 ] 同 0041 后段，增加去超市的理由，为了通宵开发电话微波炉（暂）二号机。  
+> [ 2011/06/月末 铃羽视角 ] 同 0041 后段，增加去超市的理由，为了通宵开发『电话微波炉(暂)·二号机』。  
 
 | [←prev](./0149) | [menu](../) | [next→](./0151) |
 
@@ -44,7 +44,7 @@
 “啊，不过在那之前，让我先去一下便利店……”  
 “……去干什么？”  
 “啊这，其实我晚饭还没吃……今晚感觉又要熬通宵，就想着趁还不太晚去买点东西——”  
-桶子保持着卑屈的姿势，指了指开发室的方向，那里放着组装完毕，仍在试错阶段的电话微波炉（暂）二号机。  
+桶子保持着卑屈的姿势，指了指开发室的方向，那里放着组装完毕，仍在试错阶段的『电话微波炉(暂)·二号机』。  
 “……”  
 “噫！不要瞪我啦！我会尽量买些吃了不会发胖的食物啦，恳请批准。”  
 “……香草。”  
