--- a/article/sg0/doc/0152.md
+++ b/article/sg0/doc/0152.md
@@ -1,6 +1,6 @@
 # 弹性界限的认知 - 08
 > 1.129954  
-> [ 2011/07/03 铃羽视角 ] 在 0043 基础上结尾不同：冈伦三人接比屋定来到 LAB，桶子二人急忙藏起开发中的电话微波炉（暂）二号机。  
+> [ 2011/07/03 铃羽视角 ] 在 0043 基础上结尾不同：冈伦三人接比屋定来到 LAB，桶子二人急忙藏起开发中的『电话微波炉(暂)·二号机』。  
 
 | [←prev](./0151) | [menu](../) | [next→](./0153) |
 
@@ -175,10 +175,10 @@ GOGO 咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经
 铃羽突然想到了什么，回头看向房间。  
 “啊，糟糕了，那个，就那么放在外面！”  
 “诶？”  
-铃羽指向开发室的桌子，上面光明正大的摆放着开发中的电话微波炉（暂）二号机。  
+铃羽指向开发室的桌子，上面光明正大的摆放着开发中的『电话微波炉(暂)·二号机』。  
 “啊！糟糕糟糕，快藏起来！”  
 “*Okey-dokey!*”  
-不管怎么说，这样就和比屋定真帆在未来道具研究所成功汇合了。由此，能使进展不顺利的电话微波炉（暂）二号机的开发取得少许突破，铃羽这么期待着。  
+不管怎么说，这样就和比屋定真帆在未来道具研究所成功汇合了。由此，能使进展不顺利的『电话微波炉(暂)·二号机』的开发取得少许突破，铃羽这么期待着。  
 
 
 <br/>
