--- a/article/sg0/doc/0052.md
+++ b/article/sg0/doc/0052.md
@@ -94,7 +94,7 @@
 路上的 RINE 小剧场：
 『喂喂，冈伦，死库水的话你觉得哪种颜色比较好？』  
 「你在说什么啊」  
-『呀，我在玩黄游，里面出现了这个选项  
+『呀，我在玩工口游戏，里面出现了这个选项  
  所以在想，如果是冈伦会选什么颜色』  
 「![](../static/image/emoji/okarin-ha.png)」  
 『呃，其实我最想问的是真由喜和琉华氏还有菲莉丝碳他们的想法』  
