--- a/article/sg0/doc/0127.md
+++ b/article/sg0/doc/0127.md
@@ -1,6 +1,6 @@
 # 盟誓的文艺复兴 - 05
 > 1.055821  
-> [ 2036/03/07 ]冈伦终于亲身体验到了自以为知道却始终没有正视的 β 世界线未来战争的地狱，意识到了自己的一直以来的自以为是与自我欺骗，实际上谁都没能拯救，只有自己得救。冈伦收到了 2025 年的自己的口信，要将红莉栖从『Amadeus』的诅咒中解放出来。他终于下定决心，通过桶子和真帆一直精心维持的时间跳跃环境，进行近 3000 次的时间跳跃回到过去。这部分，游戏的处理是直接一个转场带过，不如动画处理得燃。跳跃回过去的方案是桶子提出的，和真帆共同维护的；动画处理为冈伦自己意识到时间跳跃装置的存在，是因为衔接的是前文时间跳跃的剧情。游戏里真帆主动提出自己改良了时间跳跃的长度，要冈伦以后替她向红莉栖炫耀。并且游戏中当前世界线应该没有『Amadeus』的“红莉栖”，只有记忆备份。  
+> [ 2036/03/07 ]冈伦终于亲身体验到了自以为知道却始终没有正视的 β 世界线未来战争的地狱，意识到了自己的一直以来的自以为是与自我欺骗，实际上谁都没能拯救，只有自己得救。冈伦收到了 2025 年的自己的口信，要将红莉栖从『Amadeus』的诅咒中解放出来。他终于下定决心，通过桶子和真帆一直精心维持的时间跳跃环境，进行近 3000 次的时间跳跃回到过去。这部分，游戏的处理是直接一个转场带过，不如动画处理得燃。跳跃回过去的方案是桶子提出的，和真帆共同维护的；动画处理为冈伦自己意识到『时间跳跃机』的存在，是因为衔接的是前文时间跳跃的剧情。游戏里真帆主动提出自己改良了时间跳跃的长度，要冈伦以后替她向红莉栖炫耀。并且游戏中当前世界线应该没有『Amadeus』的“红莉栖”，只有记忆备份。  
 
 | [←prev](./0126) | [menu](../) | [next→](./0128) |
 
@@ -48,7 +48,7 @@
 
 ![](../static/image/0127-1.png)
 
-“电话微波炉（暂定）……”  
+“『电话微波炉(暂)』……”  
 “是我根据你和桥田先生的描述制作出来的哟。看，也配上了 VR 耳机哦。”  
 “因为想着可能会有这种事，飘升机也准备好了。”  
 “……”  
@@ -56,7 +56,7 @@
 “不断改良后的结果，可以跳跃的时间延长到了 336 小时。”  
 “336 个小时……两周吗。”  
 “可是，只能这样跳跃到中途。  
- 因为是 10 年前改良的时间跳跃装置，所以再往前还是只能跳跃 48 小时。”  
+ 因为是 10 年前改良的『时间跳跃机』，所以再往前还是只能跳跃 48 小时。”  
 也就是说，想要回到 2011 年 1 月末，简单计算下——怎么说也要近 3000 次的时间跳跃……  
 “这将会是前所未有的艰辛旅程。就算这样你还要回去吗……”  
 “……”  
@@ -81,7 +81,7 @@
 “冈部先生。”  
 “嗯……？”  
 “如果可以的话，下次见到红莉栖时帮我带句话：  
- ‘未来的我制作的时间跳跃装置，可以跳跃的时间是你的 7 倍哟！’”  
+ ‘未来的我制作的『时间跳跃机』，可以跳跃的时间是你的 7 倍哟！’”  
 “……我知道了。”  
 见到红莉栖的话——  
 “冈伦，这边的准备已经 OK 了！”  
@@ -89,7 +89,7 @@
 “毕竟我一直都在维护呐。”  
 “真不愧是你啊。”  
 “还好啦。”  
-电话微波炉（暂定）和 VR 耳机，和我在 LAB 里见到的多少有点不同，但毫无疑问，是我们的未来道具……  
+『电话微波炉(暂)』和 VR 耳机，和我在 LAB 里见到的多少有点不同，但毫无疑问，是我们的未来道具……  
 “啊但是，不和真由姐她们说一声没关系吗？”  
 “……现在不进行跳跃的话，决心就要减弱了。  
  而且，就算现在不见，总还会见到的，在过去的世界里……”  
