--- a/article/sg0/doc/0153.md
+++ b/article/sg0/doc/0153.md
@@ -1,104 +1,74 @@
 # 无限远点的牵牛星 - 01
 > 1.129954  
-> [ 2011/07/07 真帆视角 ] 在 LAB 开发电话微波炉（暂）二号机，发生爆炸，于是借用浴室洗澡。这时冈伦突然来到了 LAB。  
+> [ 2011/07/07 真帆视角 ] 在 LAB 开发『电话微波炉(暂)·二号机』，发生爆炸，于是借用淋浴间洗澡。这时冈伦突然来到了 LAB。  
 
 | [←prev](./0152) | [menu](../) | [next→](./0154) |
 
 ---
 
-“伴随着轰隆的爆炸声，房间里被烟尘笼罩。”  
+轰——伴随着爆炸声，LAB 不大的房间完全被烟尘笼罩。  
 “咳咳！窗户！窗户打开！”  
 “咳咳咳！O、Okey……咳、Okey-dokey……”  
-“真帆从开发室爬着逃到了客厅。”  
-“桶子慌乱地打开窗户，从楼下传来了男房东的怒吼声。”  
-“喂、桥田！刚刚的声音是什么！”  
-“你们在搞恐怖活动吗！我报警了！”  
-“对不起！是微波炉爆炸了！”  
-“桶子的脸从窗户探出，对着下面在不停鞠躬道。”  
-“房东暂时好像接受了，然后结束了这个隔着窗户的争论。”  
-“哈——吓死人了……”  
-“桶子一边这么说着一边擦着额头上的汗，脸上和衣服上都沾满了黑色的煤灰。”  
-“不是吓人什么啊！”  
-“真帆也一样，头发末端沾满了灰尘，特意准备的白大褂，都黑掉了。”  
-“解释一下怎么了。为什么突然会冒出烟来！”  
-“我觉得是微波炉本身的原因。因为是捡来的本来作为大型垃圾扔掉的东西。可能哪里短路了。”  
-“捡来的——你！”  
-“我们在造的东西，是能在人类史上留名的大发明啊！”  
-“但你为何会拿大型垃圾来当做部件使用啊！”  
-“专用的微波炉太贵了……”  
-“真是无法相信……！”  
-“用我的信用卡也可以，不管怎样搞定它。”  
-“虽然真帆也没有太多存款，但是管不了那么多了。”  
-“那就帮大忙了哦。”  
-“啊……”  
-“真帆用毛巾擦了擦沾满汗水和煤灰的脸，纯白的毛巾马上变成黑色的。”  
-“真是，受不了了。开空调吧。”  
-“这没办法。”  
-“和“电话微波炉（暂）二号机”一起工作的话。总开关会跳闸的。”  
-“而且那个空调花的电费太多了。不是说了，一天只能用一个小时吗……”  
-“多么恶劣的环境啊。”  
-“红莉栖就是在这种环境造出了时间跳跃机吗。”  
-“一想到这点，真帆就对红莉栖肃然起敬。”  
-“知道了。但是头发都沾满了碳灰，所以想借一下浴室。”  
-“请请请。”  
+真帆手脚并用地从开发室爬到客厅。桶子则手忙脚乱地打开窗户，同时听到楼下男房东的怒吼：  
+“喂，桥田！刚刚的声音是怎么回事？你们在搞恐怖活动吗！我要报警了！”  
+“八好意思！是微波炉爆炸了！”  
+桶子探出头，一个劲儿地对着楼下低头道歉，好一会儿才姑且安抚了房东，结束了这场隔空争论。  
+“哈——太吓人了……”  
+桶子擦着额头上的汗，脸和衣服都被熏黑了。  
+“何止是吓人啊！”  
+真帆也一样，连一部分发梢都被燎焦，特意准备的白大褂也变得黑黢黢的。  
+“给我解释一下，为什么突然会冒烟！？”  
+“我觉得是微波炉本身的原因。因为是从大件垃圾场捡回来的，可能哪里短路了。”  
+“居然是捡回来的——你啊！我们在制造的，可是能留名人类史的伟大发明啊！你却用大件垃圾作为部件？！”  
+“商用微波炉太贵了……”  
+“真是难以置信……！我的信用卡也拿去用吧，不管怎么说给我搞定它！”  
+虽然真帆也没有太多存款，但是管不了那么多了。  
+“这可真是帮大忙了哦。”  
+“唉……”  
+真帆用毛巾擦了擦沾满汗水和黑灰的脸，纯白的毛巾一下子变成了黑色。  
+“真是的，受不了了，开空调吧。”  
+“这个不行。和『电话微波炉(暂)·二号机』一起工作的话，会立刻跳闸的。  
+ 而且那个空调会让电费变得很吓人哦。不是说了嘛，一天只能用一个小时……”  
+“……”
+多么恶劣的环境啊……红莉栖就是在这种环境里造出了『时间跳跃机』吗？一想到这点，真帆就对红莉栖肃然起敬。  
+“知道了啦。不过现在满身黑灰，我想借用一下淋浴间。”  
+“请用请用。”  
 “先说好，你要是敢偷窥什么的……我马上就联系铃羽小姐。”  
-“我不会做这种事的。”  
-“面对真帆的警告，桶子不知为何无精打采地聋拉着肩膀。”  
-“话说，我现在可没有陪你开这种玩笑的闲心。……”  
-“对于真帆来说，那并不是在开玩笑，是非常认真的。”  
-“伤心的我，这周已经连和谐游戏也戒了……嗨……”  
-“真帆来的那天从铃羽那里听说了，他好像把约会搞的很失败的事。”  
-“实际上，从那开始，桶子就比平常要老实很多。”  
-“真由理的名言是“桶子不玩 H 游戏，这可是天崩地裂的前兆啊！”。”  
-“总之，不陪散发着失败气场的桶子闹了，真帆随便搪塞着进入了浴室。”  
+“我才不会做那种事呢。”  
+面对真帆的警告，桶子不知为何沮丧地耷拉着肩膀。  
+“话说，我现在连跟你开这种玩笑的心情都没有……”  
+真帆可没有在开玩笑，她是非常认真的在警告。  
+“伤心的我，这周甚至连玩工口游戏都无法进入状态……唉……”  
+真帆来的那天听铃羽说，桶子好像把约会搞得很失败。从那之后，桶子就比平常要老实很多。真由理甚至留下了名句：“桶子君不玩色色的游戏，这可是天崩地裂的前兆哟！”  
+总之，懒得搭理散发着失败气场的桶子，真帆随便敷衍几句，就进入了淋浴间。  
 
-“浴室因为平常铃羽有在使用，所以保持着相对干净的状态。”  
-“沐浴露和洗发露都一块儿准备着，铃羽说随意用好了。”  
-“真是的，好不容易到了七夕，为什么非得这样沾满煤灰呢。”  
-“今天是七夕。”  
-“其实，真帆私下里对今天是很期待的。”  
-“一直住在美国的真帆，对于日本夏天的风雅文化，多少抱有一些兴趣。”  
-“特别是七夕，织女和牛郎的故事，和把心愿写好挂在竹叶上的传统之类的，有特别深的印象。”  
-“难得有机会，真帆也想试着写下自己的心愿。”  
-“因为讨厌被当做是小孩，所以自己不想说出来。但是真由理和菲莉丝那群女生好像挺喜欢这类活动，也许会来邀请自己呢。真帆这样期待着。”  
-“所以，在这酷热的午后，在 LAB 和桶子两个人沾满煤灰的情况，想想就觉得心痛。”  
-“哈~。”  
-“在想着这些事情的时候，洗掉了粘在肌肤上的污物。”  
+淋浴间因为平常有铃羽在使用，所以保持着相对干净的状态。沐浴露和洗发露这些用品都基本备齐了，铃羽说过可以随便用。  
+（真是的，难得的七夕，为什么非要搞得自己满身黑灰呢……）  
+今天是七夕。其实，真帆私下里很期待这一天。一直生活在美国，对日本的风俗文化颇有些兴趣。特别是七夕，牛郎和织女的故事，把心愿写在短签上然后挂在竹叶上的传统等等，她对这些印象深刻。难得有机会，真帆也想写下自己的心愿。因为讨厌被当作小孩，所以别扭地不想主动提出。但是真由理和菲莉丝那群女生好像挺喜欢这类活动，于是真帆期待着她们也许会来邀请自己。正因如此，现状却是，在如此酷热的下午，她和桶子两个人待在 LAB，还弄得满身黑灰，想想就觉得心痛。  
+“哈\~”  
+真帆一边想着这些，一边清洗着粘在肌肤上的污渍。这时却听到外面传来桶子的呼唤：  
 “真帆碳！真帆碳！”  
-“从外面传来了桶子的叫声。”  
-“诶、诶！什么啊！难道你真的打算偷窥！”  
-“你要是敢打开门的话？我、我、我、我就哭给你看！”  
-“现在不是说这种萌台词的时候。”  
-“刚刚真由喜打电话过来了！冈伦待会儿可能要来这里！”  
-“诶？冈部先生？”  
-“一听到这句，真帆一下子慌张的叫起来。”  
-“听说最近冈部基本上没有来 LAB。”  
-“事实上，虽然到日本那天还把自己送到了 LAB，但从那之后就再也没见他来过了。”  
-“所以才安心的进出 LAB……”  
-“虽然“电话微波炉（暂）二号机”已经藏起来了，但是注意不要暴露我们在研究的事。”  
-“嗯……我知道了……”  
-“话说，我现在在这里不是糟了？”  
-“如果不回去菲莉丝的公寓藏起来的话。”  
-“什么？”  
+“诶、诶！？什么啊！？难道你真的打算偷窥！？  
+ 你要是敢打开门的话，我、我、我……我就哭给你看！”  
+“现在不是说这种萌台词的时候。刚刚真由喜打来了电话，说冈伦待会儿可能要来这里！”  
+“诶？冈、冈部先生？”  
+一听到这句，真帆顿时慌了神。之前听他们说，冈部基本上不来 LAB 了。事实上，虽然刚到日本那天，冈部接机后把她送到了 LAB，但那之后就再也没见他来过了。所以她才大摇大摆地进出 LAB……  
+“『电话微波炉(暂)·二号机』已经藏起来了，更重要的是，不要暴露我们在研究它。”  
+“嗯、嗯……我明白……”  
+“话说，我现在在这里要出问题啊……得赶快回菲莉丝的公寓藏起来。”  
+“为什么？”  
 “因为，本来我现在应该在冲绳啊！”  
-“是的，对于冈部，是这么和他解释来日本的理由的。”  
-“要是暴露了正在和桶子一起开发“电话微波炉（暂）二号机”的话，事情就麻烦了。”  
-“这样啊！”  
-“那，赶快出来！”  
-“你在那里的话我出不去的吧！”  
-“也是呢~。”  
-“确认了桶子已经离开的迹象后，真帆匆忙洗掉了身上的沐浴露泡泡。”  
-“虽然还没长发还没洗，但现在不是时候。”  
-“在用毛巾擦全身，正要走出浴室的时候。”  
-“玄关传来了开门的声音。”  
+没错，这是她对冈部说明的来日本的理由。要是暴露了她其实是在和桶子一起开发『电话微波炉(暂)·二号机』，事情就麻烦了。  
+“对哦！那你赶快出来！”  
+“你在那里我怎么出去啊！”  
+“也是呢\~”  
+确认桶子已经离开之后，真帆匆忙冲掉了身上的沐浴露泡泡。虽然还没长发才洗到一半，但现在不是时候。  
+
+真帆用毛巾擦干了身体，正要走出淋浴间的时候——玄关传来了开门的声音。  
 “哟，桶子。”  
-“已经来了吗？”  
-“真帆瞬间又关上了浴室的门。”  
-“但是看着全裸的自己，呆住了。”  
-“脱下衣服的衣服都散落在门外。”  
-“没办法在不被冈部注意到自己存在的情况下，拿到衣服。”  
-“这样的话，只好保持这样毫无防备的姿态，躲起来熬着了。”  
-“（但是这样……太、怎么说……太不安根本冷静不下来……！）。”  
+“啊？！”
+冈部已经来了吗？真帆瞬间又关上了淋浴间的门，然后低头看着一丝不挂的自己，呆住了。脱下衣服的都散落在门外，没办法在不被冈部注意到的情况下拿到。既然如此，只好保持这样毫无防备的姿态，先躲起来熬着了。  
+（可这样……实在是、怎么说……实在是冷静不下来啊……！）  
 
 
 <br/>
