--- a/article/sg0/doc/0154.md
+++ b/article/sg0/doc/0154.md
@@ -7,175 +7,108 @@
 ---
 
 “哟，桶子。”  
-“进入了 LAB，桶子带着有些慌张的模样来迎接我。”  
-“啊，冈伦啊。一个人过来很难得嘛。”  
-“房间里不知道为什么有股烧焦的气味。”  
-“还有，浴室刚被用过吗？还混着肥皂的香味。”  
-“但是，桶子肯定没有用过浴室。”  
-“因为脸上和衣服上都还是黑色的污渍。”  
-“可能是铃羽在吧，因为浴室的灯亮着。”  
-“你在干嘛？都黑了。”  
-“这个是那个……”  
-“之前捡了个被遗弃的微波炉对吧。刚刚要给便利店快餐加热的时候，爆炸了……【校注：桶子你爆炸了？』  
-“爆炸……没事吧。”  
-“让布朗氏发火了。”  
-“不要让他盯上你哦。不然什么时候被赶出去都不知道。”  
-“那样的话，你还没事，铃羽会没地方去的。”  
-“是、是啊。”  
-“那么？今天来干嘛？真由喜没有来啊。”  
-“有事情和你说。好消息哦。”  
+“啊，冈伦啊，难得你一个人过来嘛。”  
+刚走进 LAB，桶子带着有些慌张的表情来迎接我。房间里不知为何有股烧焦的气味，还有混着肥皂香味的潮气，是淋浴间刚被用过吗？但是，桶子肯定没有用过淋浴间，因为他的脸和衣服上都是黑色的污渍。可能是铃羽在吧，因为淋浴间的灯亮着。  
+“你在干嘛？怎么搞的满身黑？”  
+“啊……这是那个……之前捡了台被丢掉的微波炉，刚刚要加热便利店快餐的时候，爆炸了……”  
+“爆炸……没事吧？”  
+“布朗氏发火了。”  
+“不要被他盯上哦，不然什么时候被赶出去都不知道。那样的话，你倒没事，铃羽会没地方去的。”  
+“是、是的呢……那么，你今天来干嘛？真由喜没过来啊。”  
+“有事和你说，好消息哦。”  
 “但我拒绝。”  
-“我还说明都没说吧。”  
-“冈伦带来的消息一次都没有正经的。”  
-“好了听着。”  
-“昨晚和雷斯吉宁教授一起吃了饭。然后，谈了谈留学的事情。”  
-“啊，又是那个事啊。”  
-“我现在和雷斯吉宁教授会有定期的联系。”  
-“当然，比屋定来日本的事情，教授也知道。”  
-“昨天也看到了从冲绳发来的比屋定的照片。”  
-“画面中浪花拍来，比屋定一脸死板表情站着。大概是家人或者朋友拍的吧。”  
-“因此，和雷斯吉宁教授的诚心邀请——关于去维克多·孔多利亚大学留学的事情，详细商谈了一番。”  
-“当然也提出了最低条件，那就是从现在的大学毕业，然后通过维克多·孔多利亚大学的留学测试。”  
-“因为机会难得，所以也把桶子的事情和教授说了。然后他也挺感兴趣。”  
+“我还什么都没说吧。”  
+“冈伦带来的消息没有一次是好的。”  
+“好了，听着，我昨晚和雷斯吉宁教授一起吃了饭，谈了留学的事情。”  
+“啊，又是那件事啊……”  
+现在，我和雷斯吉宁教授会定期联系。当然，比屋定来日本的事情，教授也知道，昨天还给我看了比屋定从冲绳发来的照片。画面中，浪花拍打着前方一脸死板的比屋定，大概是家人或者朋友拍的吧。席间，雷斯吉宁教授诚心地邀请我去维克多·孔多利亚大学留学，就此商谈的最低条件，是从现在的大学毕业，然后通过维克多·孔多利亚大学的留学测试。  
+“因为机会难得，所以也向教授介绍了你的事情。他对你也挺感兴趣。”  
 “诶？我？”  
-“维克多·孔多利亚大学有“情报科学研究所”这样的地方。里面聚集了世界顶尖的黑客。”  
-“以你的水平一定进得了吧。”  
-“以前也邀请过桶子一起去美国留学，但他并没有什么兴趣的样子。”  
-“说“不能想象离开宅的圣地的生活”，或是“买不到和谐游戏和手办的地方不可能去。”。”  
-“总是这样解释搪塞道。”  
-“因为我是超级黑客，进倒是是可以进的啦……”  
-“总之先见一下教授怎么样？先混个脸熟。”  
-“现在很忙啊。”  
-“一天时间还是挤的出来吧。”  
+“维克多·孔多利亚大学有一个【情报科学研究所】，听说聚集了世界顶尖的黑客，以你的水平一定可以加入。”  
+以前我也邀请过桶子一起去美国留学，可他并没有什么兴趣的样子，说什么“不能想象离开宅之圣地的生活”，或者“买不到工口游戏和手办的地方不可能去”，总是用这些理由搪塞。  
+“毕竟我是超级黑客啦，加入倒是可以……”  
+“总之先见一下教授怎么样？之前也见过一次。”  
+“我最近很忙啊。”  
+“一天时间总能挤出来吧。”  
 “CM 结束前是不可能的。”  
-“不是还有一个多月吗？”  
+“那不是还有一个多月吗？”  
 “总之，暂时不行。”  
-“真是的，真的都是在搪塞啊。就这么不想去吗？”  
-“我叹了口气，在沙发上坐下。”  
-“话说，这个房间还是老样子，一到夏天就就像地狱一样炎热。”  
-“窗户全开，风扇也不停转动，但是依旧汗如雨下。”  
-“虽然有空调，但是没有在用。”  
-“桶子，Dr. Pepper 还有吗？”  
-“啊，不知道啊。真由喜可能有买一些放着吧。”  
-“我站起来，打开房间角落的冰箱往里头探了探。”  
-“里面有普通的可乐，矿泉水，运动饮料等等。”  
-“但是一听 Dr. Pepper 也没有。”  
-“冰箱塞满了大量惯例的“多汁炸鸡 No.1”。”  
-“买了这么多来放啊，真由喜那家伙。”  
-“好像明显比之前多了？”  
-“也许是铃羽的份也包括在里面。”  
-“拿你一瓶运动饮料哦？”  
-“铃羽喝一半的以外都行。”  
-“拿了一瓶新上市的运动饮料，润了润干渴的喉咙。”  
-“突然看到在冰箱旁边，用来保存点心的架子上，有 5 串香蕉和杯面零食混着放在一起。”  
-“这肯定是真由理的。”  
-“但是，即使如此——炸鸡块的数量也好，那家伙点心的数量是不是太多了。”  
-“虽然本人说，是不管吃多少都不会胖的体质。”  
-“即使如此，一下买这么多来放，会有很多香蕉过熟以桶子于里面软掉，最后味道变得不能吃吧。”  
-“真由理那家伙，香蕉买太多了吧？”  
-“啊，那些不是真由喜，是我——”  
-“啊。”  
-“桶子突然闭上了嘴。”  
-“我一看过去，他就明显一下子撇开了眼睛。”  
-“怎么回事，刚刚开始样子就很奇怪。”  
-“这家伙……在隐瞒着什么吗？”  
-“是你买的吗？什么时候开始喜欢香蕉的？”  
-“不、不是，你看，铃羽不是说过。对减肥很好，要每天吃。”  
-“说起来，以前好像流行过这么减肥的呢。”  
-“发生过有明星在电视上说可以用香蕉减肥的话，然后第二天，超市货架上一根香蕉都不剩的的愚蠢事件。”  
-“因为我家的冈部青果店，稍微晚了一步觉察到这股热潮，脑子一热进了很多香蕉，因为流行已过结果剩了一大堆……我有着这样的记忆。”  
-“那也别一下子买这么多啊。大多数会黑掉的。”  
-“算了。正好有点饿，就拿一根来吃吧。”  
-“从上面掰了一根，剥掉皮。”  
-“总之，你稍微多少考虑一下吧。”  
-“这、这样啊。嗯。”  
+“哎呀哎呀，真是一直在搪塞啊，就那么不想去吗？”  
 
-“我三口把香蕉吃完，正要把皮丢入可燃垃圾桶——”  
-“发现一件奇怪的事情。”  
-“垃圾箱中有都是香蕉。”  
-“这个量很不寻常。”  
-“垃圾箱有一半都被香蕉淹没。”  
-“而且不是只有皮。有一半是半腐的、由于夏天热气而散发出了讨厌味道的香蕉，也被扔掉了。”  
-“垃圾箱中的这个景象，我以前也见过。”  
-“……又要制造胶化香蕉吗？”  
-“是的，一年前，连续没日没夜做实验，住在这里的时候。”  
-“刚刚看到的冰箱里的东西，在脑海中复苏。”  
-“那个，数量异常巨大的炸鸡块的储存。”  
-“这个、莫非……！”  
-“我无视肮脏，把手伸到垃圾桶中翻动着。”  
-“等等、冈伦？”  
-“虽然桶子看到我的行动后开始慌乱，但被我无视了。”  
-“果然如我所料。香蕉的大量残骸下面，翻出了大量炸鸡块的包装袋。”  
-“不管真由理怎么样喜欢，不管桶子饭量多大，也不觉得会这样每天每天只吃冷冻炸鸡块。”  
-“在垃圾桶更深的地方找着。”  
-“然后在那里，找到了不想看到的东西。”  
+我叹了口气，坐在了沙发上。话说，这个房间还是老样子，一到夏天就像地狱一样闷热。窗户大开，风扇也全力转动，依旧汗如雨下。虽然有空调，但是没有开。  
+“桶子，Dr. Pepper 还有吗？”  
+“不知道啊，真由喜可能有买一些放着吧。”  
+我站起来，打开房间角落的冰箱看了看，里面有普通的可乐、矿泉水、运动饮料等等，可一瓶 Dr. Pepper 也没有。冷冻室按惯例塞满了大量“多汁炸鸡 No.1”。真由理买的这个量，好像明显比以往还要更多？也许是包括了铃羽那份。  
+“拿你一瓶运动饮料哦？”  
+“只要不是铃羽喝过的就行。”  
+拿了一瓶新上市的运动饮料，润了润干渴的喉咙。突然看到，冰箱旁边的零食架上，除了杯面和油炸零食，还放着 5 串香蕉，肯定也是真由理买的吧。再怎么说，炸鸡也好，香蕉也好，那家伙屯粮的量是不是太多了？虽然她本人说过自己是不管吃多少都不会胖的体质。即使如此，一下子买这么多，最后香蕉会过熟变得软糊糊且味道难以入口吧。  
+“真由理那家伙，香蕉买太多了吧？”  
+“啊，那些不是真由喜买的，是我——呃……！”  
+桶子突然闭嘴，我一看过去，就明显地避开了我的视线。怎么回事？刚才开始他的样子就不对劲，这家伙……隐瞒着什么吗？  
+“是你买的吗？你什么时候开始喜欢香蕉了？”  
+“不、不是，你看，铃羽不是说过嘛，对减肥好，要每天吃。”  
+“说起来，以前好像流行过这么减肥呢。”  
+曾经电视上有位明星说可以吃香蕉减肥，结果第二天超市和水果店的货架上，一根香蕉都不剩了，真是令人哭笑不得。我家的冈部青果店，稍晚一步才觉察到这股热潮，老爸脑子一热进了很多香蕉，结果流行期过了，剩下一大堆……我对此印象深刻。  
+“那也别一下子买这么多啊，大多数会黑掉的。”  
+算了，正好有点饿，就从上面掰了一根，剥开。  
+“总之，这也要考虑到啊。”  
+“是、是的呢……嗯……”  
+
+我三口吃完香蕉，正要把皮丢进可燃垃圾桶——发现了一件奇怪的事情，垃圾桶里一半都是香蕉，这个量很不寻常。而且不只是香蕉皮，还有半腐烂的香蕉果肉，由于夏天的炎热而散发着恶心的味道。垃圾桶中的这个景象，我印象中见过——是的，一年前，我住在这里，没日没夜地拉着桶子真由理连续进行某个实验的时候。我又想到冰箱里那异常的炸鸡块的存量，莫非是……！我无视肮脏，把手伸到垃圾桶中翻动着。”  
+“等等，冈伦？！”  
+桶子看到我的举动更加慌乱，但被我无视了。果然如我所料，大量的香蕉残骸下面，翻出了大量炸鸡块的包装袋。不管真由理再怎么喜欢，桶子饭量再大，也不可能这样这样连续几天只吃冷冻炸鸡块。我继续翻找垃圾桶更深的地方，终于，发现了我不想看到的东西。  
 “呐……桶子？”  
-“呃、嗯？”  
-“香蕉和炸鸡块的组合，好怀念呢。”  
-“嗯……？”  
-“大概一年前，我们也经常这样实验呐。”  
-“因为很浪费，让真由理很生气。说，不能这么粗暴的对待事物。”  
-“是、是啊。”  
-“所以没办法，只好由我们来处理微波炉加热过的香蕉。真是糟糕的味道。”  
-“但是，这东西果然还是吃不下去啊。”  
+“咋、咋了？”  
+“香蕉和炸鸡块的组合……好怀念呢。”  
+“呃、嗯……？”  
+“大概一年前，我们也经常这样实验啊。因为太浪费，真由理总是生气地说我们不能这么粗暴对待食物。”  
+“是、是的呢。”  
+“所以没办法，我们只好吃掉微波炉加热过的香蕉，那味道真是糟糕啊。  
+ 可是，这种东西果然还是吃不下去啊。”  
+我从垃圾箱里面掏出来的是——变成绿色的，黏糊糊的物质。就好像把大量的昆虫内脏碾碎得乱七八糟，再聚集起来，一看就恶心的粘液团。那东西从我的指缝间，啪嗒啪嗒地滴落到地板上，四溅开来。那本来是香蕉的东西，我们那时命名为胶蕉。  
 
 ![](../static/image/0154-1.png)
 
-“我从垃圾箱里面拉出来的是——”  
-“变成绿色的，黏糊糊的物质。”  
-“就好像把昆虫的内脏碾碎的乱七八糟，然后大量收集起来的，一看就恶心的粘液。”  
-“从我抓着的指缝间，“啪嗒啪嗒”的流出来，在地上四溅开来。”  
-“本来是香蕉的东西。”  
-“我们曾经称为胶化香蕉的东西。”  
-“哦……惨了……”  
-“桶子一边念叨着“失败了”，一边抱住了脑袋。”  
-“但是立刻就死心了，态度 180 度旋转。”  
-“呜、糟糕了。就这么轻松地暴露了。还以为可以多隐瞒一段时间。”  
-“事实上本来打算，如果有了头绪的话，就和你好好谈谈这件事情，坦白相告的。”  
-“桶子把毛巾朝我扔过来。”  
-“好像是桶子用过的样子，这条白毛巾有一部分已经被煤灰弄黑了。但是没办法，就用这条毛巾擦了擦被胶化香蕉弄脏的手。”  
-“桶子进入开发室，挪开堆积的箱子和防尘盖板。”  
-“哝，这就是二号机。”  
-“很快出现在桌上的是——一年前我们造出来的，不断改良，又很快自己解体掉的，那个“未来机械 8 号机”的不祥身影。”  
+“哦……完蛋了……”  
+桶子抱住脑袋，仿佛陷入了巨大的挫败感。然后忽然态度一转，坦然地正面面对我。  
+“呜——我输了……这么轻松就暴露了，还以为可以多隐瞒一段时间的说……  
+ 事实上，我本来打算，一旦有了头绪，就和你好好坦白，商量这件事的。”  
+桶子扔给我一条毛巾，应该是他用过的，白毛巾有一部分已经被弄黑了。没办法，用它擦了擦被胶蕉弄脏的手。  
+
+桶子走进开发室，挪开堆积的箱子和防尘盖板。  
+“喏，这是『二号机』。”  
+桌上的是——一年前我们造出来的，不断改良，又很快被我亲手拆掉的，那个招来灾厄的“未来道具 8 号机”。  
 “重新……组装了吗……”  
-“很迷茫是不是要叫做“电话微波炉（暂）ver2”比较好呢。”  
-“名字随便就好。”  
-“真的吗？听起来不像冈伦说的话。”  
-“不管是哪个未来机械，都要经过圆桌会议的激烈讨论才能确定名字吗？”  
+“我还在犹豫是不是叫『电话微波炉(暂)·ver2』比较好呢。”  
+“名字随便了。”  
+“真的？听起来真不像是冈伦说的话。不论哪个未来道具，不是都要通过圆桌会议激烈讨论才能确定名字吗？”  
 “那是黑历史……”  
 “是吗？”  
-“桶子转向了放在里头架子上，堆满了灰尘的曾经的未来机械们，怜爱的目光在上面游动。”  
-“什么啊，这个态度。”  
-“想说那时候的事情，是宝贵青春上的一页吗？”  
-““别开玩笑了”本想这么说，还是一口气忍住了。”  
-“你忘了我说过什么了吗？”  
-“这很危险。不是我们能够持有的东西。”  
-“嗯，但是……我未来不能不造时间机器的啊。”  
-“这样的话，果然，研究这东西就是迈出第一步。”  
+桶子看向开发室里面的架子，曾经的未来道具们蒙上了厚厚的灰尘。桶子的目光充满怜惜，什么啊，这个态度是想说，那些事情是宝贵青春上的一页吗？“别开玩笑了！”本想这么说，还是忍住了。  
+“你忘了我说过什么了吗？这东西很危险，不是我们能够持有的。”  
+“嗯，可是……我未来不能不造出时间机器的吧。所以我想，研究这东西就是迈出第一步。”  
 “桶子！”  
-“我忍不住大喝一声，追问道。”  
-“我说过几遍，几遍几遍几遍了！”  
-“因为这东西，发生了什么。因为这东西，我经历了什么。”  
-“因为造出这个东西，会让真由理被杀掉的……！”  
-“因为造出这个东西，红莉栖牺牲了……！”  
-“因为造出这个东西，你的女儿跳回到过去，最后自杀了……！”  
-“你要是说你忘了的话，那我就再跟你说一遍。”  
-“你是笨蛋吗？那种不见棺材不掉泪的笨蛋吗？”  
+我忍不住大喝一声，冲动地对着桶子大吼着逐步逼近：  
+“我说过多少次了，多少次多少次多少次了啊！！  
+ 因为这东西，发生了什么？因为这东西，我经历了什么？  
+ 因为造出这东西，真由理会被杀……！  
+ 因为造出这东西，红莉栖牺牲了……！  
+ 因为造出这东西，你的女儿跳回过去，最后自杀了……！  
+ 如果你忘了的话，那我就再跟你说一次。  
+ 你是笨蛋吗？那种不亲身经历一次就不会懂的笨蛋吗？！”  
 
 “笨蛋的是你啊，冈部伦太郎！”  
-突然从背后传来一个饱含怒气的女声。转过身去一看，发现了盯着我的比屋定真帆的身影。”  
+背后突然传来一个饱含怒气的女声。转过身一看，发现比屋定真帆正在瞪着我。  
 
 ![](../static/image/0154-2.png)
 
 “什！比屋定小姐！？”  
-“哇……合法萝莉出现了……”  
-“你这是什么打扮啊！”  
-“不对，你为什么在这里！”  
-“啊！那个！这个！一下子没忍住……！”  
-“不要一直盯着看！我起诉你哦！”  
-“是你自己这幅打扮出来的吧！”  
+“哇……合法萝莉 ktkr……”  
+“你这是什么打扮啊！？不对，你为什么在这里！？”  
+“啊、那个！这是……一时冲动……！不要一直盯着看！我起诉你哦！”  
+“是你自己这幅打扮冲出来的吧！”  
 “等、等一下，我现在就穿衣服！”  
-比屋定慌慌张张地钻回了浴室。  
+比屋定慌慌张张地钻回了淋浴间。  
 
 
 <br/>
